JAVA-26294 :- Replace new URL with new URI(string).toURL()